@@ -105,6 +105,7 @@ Other changes:
  - gui: fixed is_visible() for layered_regions always returning false
  - gui: fixed hovered frame not updated when hide/show is called
  - gui: fixed OnEnter/OnLeave not always triggered hide/show is called
+ - gui: fixed set_alpha() not doing anything
  - xml: now parsing standard XML comments
 
 v1.2.0:
